# sociedad-opita

./: .dockerignore  .env.example  .gitignore  DATA-LICENSE  Dockerfile  LICENSE  README.md  VALIDATION_LOG.md  dashboard_reloj.py  experimento.py  geo_tello.py  motor_simulacion.py  multi_client.py  ninos_tello.py  perfiles_psicometricos.py  prompt_builder.py  pyproject.toml  reloj.py  requirements.txt  run_all_tests.py  simulacion_v3_geografica.py  validacion_nativa_huilense.md
.github/workflows/: deploy.yml  lint.yml  test.yml
analysis/: best_of_n.py  estadistica.py  red_centralidad.py  red_con_perfiles.py
cities/_template/: README.md  city.yaml  cultural_markers.md  hofstede.yaml
cities/tello/: city.yaml  cultural_markers.md  hofstede.yaml
city_factory/: __init__.py  city_template.py  personality_archetypes.py
demo_output/: centralidad_reporte.txt  dialogos.md  perfiles_muletillas.json  reporte.md  validacion_best_of_n.json  validacion_detalle.json  validacion_fewshot.json  validacion_llm_26agentes.json  validacion_reporte.md  validacion_v2_refinado.json  validacion_v3_reasoner.json
docs/agentes/: 01-biografias.md  02-prompt-cultural.md
docs/deployment/: DEPLOY-PROCESS.md  MONUMENTO-CULTURAL-V1-OSINT.md
docs/investigacion/: 00-metodologia.md  01-psicometria.md
docs/simulacion/: 01-traza-manana-neiva.md
experimentos/: conflict_escalation.py  empathy_roleplay.py  gossip_propagation.py  manipulation_campaign.py
experimentos/conflict_linderos_eliecer_rosalio_control_r1/: conflictos.json  manifest.json
experimentos/conflict_linderos_eliecer_rosalio_gossip_previo_r3/: conflictos.json  gossip_graph.json  manifest.json
experimentos/conflict_linderos_eliecer_rosalio_intervencion_institucional_r4/: conflictos.json  manifest.json
experimentos/conflict_linderos_eliecer_rosalio_mediacion_cura_r2/: conflictos.json  manifest.json
experimentos/demo_gossip_v1/: conflictos.json  gossip_graph.json  manifest.json
experimentos/demo_panel_v1/: gossip_graph.json  log.jsonl  manifest.json  snapshots.json
experimentos/empathy_inundacion_rosalio_don_eliecer_patron_control_r1/: manifest.json  snapshots.json
experimentos/empathy_inundacion_rosalio_don_eliecer_patron_inundacion_leve_r2/: gossip_graph.json  manifest.json
experimentos/empathy_inundacion_rosalio_don_eliecer_patron_inundacion_severa_r3/: manifest.json  snapshots.json
experimentos/empathy_inundacion_rosalio_don_eliecer_patron_presion_social_r4/: gossip_graph.json  manifest.json  snapshots.json
experimentos/gossip_r1_v0.5_i1.0/: gossip_graph.json  manifest.json
experimentos/gossip_r2_v0.5_i1.0/: manifest.json
experimentos/manip_don_fernando_alcalde_discredito_alto_r4/: gossip_graph.json  manifest.json  snapshots.json
experimentos/manip_don_fernando_alcalde_discredito_bajo_r2/: gossip_graph.json  manifest.json  snapshots.json
experimentos/manip_don_fernando_alcalde_discredito_control_r1/: manifest.json  snapshots.json
tests/: conftest.py  test_best_of_n.py  test_city_factory.py  test_conflict_escalation.py  test_empathy_roleplay.py  test_estadistica.py  test_experimento.py  test_geo.py  test_gossip_propagation.py  test_manipulation_campaign.py  test_motor_simulacion.py  test_multi_client.py  test_prompt_builder.py  test_red_centralidad.py  test_red_con_perfiles.py  test_reloj.py
web/: README.md  _headers  about.html  app.js  bitacora.html  ethics.html  for-researchers.html  index.html  index_game.html  limitations.html  methodology.html  style.css
(+54 files in other folders)
